--- a/docs/T1Envíos/t-1-envios.info.mdx
+++ b/docs/T1Envíos/t-1-envios.info.mdx
@@ -1,7 +1,7 @@
 ---
 id: t-1-envios
 title: "T1Envios"
-description: ""
+description: "Es un servicio creado para poder cotizar y generar guías."
 sidebar_label: Introduction
 sidebar_position: 0
 hide_title: true
@@ -29,7 +29,18 @@ import Export from "@theme/ApiExplorer/Export";
 
 
 
+Es un servicio creado para poder cotizar y generar guías.
 
+
+Requests API
+Las peticiones requieren por seguridad Autenticarse por el esquema de autenticación Bearer, por lo que previamente se requiere obtener un access_token, el cual regresara un token de autenticación.
+
+Headers
+Todas las peticiones deben llevar los siguientes Headers :
+\{
+    Accept: "application/json",
+    Authorization: "Bearer \{token\}"
+\}
 
 <div
   style={{"display":"flex","flexDirection":"column","marginBottom":"var(--ifm-paragraph-margin-bottom)"}}
@@ -39,9 +50,9 @@ import Export from "@theme/ApiExplorer/Export";
   >
     Contact
   </h3><span>
-    T1Envios: [apiteam@swagger.io](mailto:apiteam@swagger.io)
+    T1Envios: 
   </span><span>
-    URL: [https://enapi.dev.t1envios.com/t1/api/](mailto:https://enapi.dev.t1envios.com/t1/api/)
+    URL: [https://enapi.t1envios.com/t1/pgs](mailto:https://enapi.t1envios.com/t1/pgs)
   </span>
 </div>
       
