--- a/docs/T1Comercios/claro-authentication-api.info.mdx
+++ b/docs/T1Comercios/claro-authentication-api.info.mdx
@@ -1,7 +1,7 @@
 ---
-id: catalogo-homologado-t-1
-title: "catalogo homologado t1"
-description: "La API para el front end del proyecto de catalogo homologado t1."
+id: claro-authentication-api
+title: "Claro Authentication API"
+description: "API for authenticating users with Claro platform."
 sidebar_label: Introduction
 sidebar_position: 0
 hide_title: true
@@ -23,13 +23,13 @@ import Export from "@theme/ApiExplorer/Export";
 <Heading
   as={"h1"}
   className={"openapi__heading"}
-  children={"catalogo homologado t1"}
+  children={"Claro Authentication API"}
 >
 </Heading>
 
 
 
-La API para el front end del proyecto de catalogo homologado t1.
+API for authenticating users with Claro platform.
 
 <div
   style={{"marginBottom":"2rem"}}
@@ -44,8 +44,8 @@ La API para el front end del proyecto de catalogo homologado t1.
     className={"openapi-tabs__security-schemes"}
   >
     <TabItem
-      label={"OAuth 2.0: user-password"}
-      value={"user-password"}
+      label={"API Key: cookieAuth"}
+      value={"cookieAuth"}
     >
       
       
@@ -58,19 +58,13 @@ La API para el front end del proyecto de catalogo homologado t1.
               <th>
                 Security Scheme Type:
               </th><td>
-                oauth2
+                apiKey
               </td>
             </tr><tr>
               <th>
-                OAuth Flow (password):
+                Header parameter name:
               </th><td>
-                <p>
-                  Token URL: https://sso.dev.claroshop.com/auth/realms/claroshop-sapi-sa-cv/protocol/openid-connect/token
-                </p><span>
-                  Scopes:
-                </span><ul>
-                  
-                </ul>
+                Cookie
               </td>
             </tr>
           </tbody>
