T1Comercios Docs Catalogos Categorias V2

--- a/docs/T1Comercios/catalogos-y-categorias.info.mdx
+++ b/docs/T1Comercios/catalogos-y-categorias.info.mdx
@@ -1,7 +1,7 @@
 ---
 id: catalogos-y-categorias
 title: "Catálogos y Categorías"
-description: ""
+description: "La API de Catálogos y Categorías proporciona funcionalidades para consultar y administrar información relacionada con marcas y categorías de productos en T1Comercios."
 sidebar_label: Introduction
 sidebar_position: 0
 hide_title: true
@@ -29,6 +29,17 @@ import Export from "@theme/ApiExplorer/Export";
 
 
 
+La API de Catálogos y Categorías proporciona funcionalidades para consultar y administrar información relacionada con marcas y categorías de productos en T1Comercios.
+
+Esta API ofrece las siguientes funcionalidades:
+
+- Consulta de Marcas: Permite obtener información sobre todas las marcas oficiales disponibles en el sistema.
+
+- Consulta de Categorías: Permite obtener información detallada sobre las categorías de productos en un catálogo específico.
+
+- Consulta de Coincidencias: Permite identificar coincidencias entre categorías y canales de ventas, incluyendo un match con el catálogo SAT para cumplir con la carta porte.
+
+Esta API es útil para integrar y gestionar eficientemente la información de productos y categorías en un entorno de ventas multicanal. Asegúrate de proporcionar las credenciales adecuadas y cumplir con los requisitos de autorización para acceder a las funcionalidades ofrecidas.
 
 
 <div
