--- a/docs/T1Comercios/documentacion-api-v-2-t-1-comercios.info.mdx
+++ b/docs/T1Comercios/documentacion-api-v-2-t-1-comercios.info.mdx
@@ -1,7 +1,7 @@
 ---
 id: documentacion-api-v-2-t-1-comercios
 title: "DOCUMENTACIÓN API V2 T1COMERCIOS"
-description: "Documentación oficial de la nueva API V2 de T1COMERCIOS"
+description: "Esta API permite a los comercios gestionar sus productos, incluyendo la creación, actualización, eliminación y obtención de información sobre productos. Además, proporciona funcionalidades para pausar y activar productos en distintos canales de venta."
 sidebar_label: Introduction
 sidebar_position: 0
 hide_title: true
@@ -29,7 +29,55 @@ import Export from "@theme/ApiExplorer/Export";
 
 
 
-Documentación oficial de la nueva API V2 de T1COMERCIOS
+Esta API permite a los comercios gestionar sus productos, incluyendo la creación, actualización, eliminación y obtención de información sobre productos. Además, proporciona funcionalidades para pausar y activar productos en distintos canales de venta. 
 
 
+<div
+  style={{"marginBottom":"2rem"}}
+>
+  <Heading
+    id={"authentication"}
+    as={"h2"}
+    className={"openapi-tabs__heading"}
+    children={"Authentication"}
+  >
+  </Heading><SchemaTabs
+    className={"openapi-tabs__security-schemes"}
+  >
+    <TabItem
+      label={"HTTP: Bearer Auth"}
+      value={"bearerAuth"}
+    >
+      
+      
+      
+      
+      <div>
+        <table>
+          <tbody>
+            <tr>
+              <th>
+                Security Scheme Type:
+              </th><td>
+                http
+              </td>
+            </tr><tr>
+              <th>
+                HTTP Authorization Scheme:
+              </th><td>
+                bearer
+              </td>
+            </tr><tr>
+              <th>
+                Bearer format:
+              </th><td>
+                JWT
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </TabItem>
+  </SchemaTabs>
+</div>
       
