T1Comercios Docs Productos_V6 fix

--- a/docs/T1Comercios/activar-publicacion.api.mdx
+++ b/docs/T1Comercios/activar-publicacion.api.mdx
@@ -1,5 +1,5 @@
 ---
-id: actuvar-publicacion
+id: activar-publicacion
 title: "Activar publicación"
 description: "Activa la publicación en los canales de venta indicados."
 sidebar_label: "Activar publicación"
