T1Envios Docs fixes

--- a/docs/T1Envíos/t-1-envios.info.mdx
+++ b/docs/T1Envíos/t-1-envios.info.mdx
@@ -52,7 +52,7 @@ Todas las peticiones deben llevar los siguientes Headers :
   </h3><span>
     T1Envios: 
   </span><span>
-    URL: [https://enapi.t1envios.com/t1/pgs](mailto:https://enapi.t1envios.com/t1/pgs)
+    URL: [https://enapi.t1envios.com](mailto:https://enapi.t1envios.com)
   </span>
 </div>
       
