T1Envios Docs add Activación Paqueterias, Reglas y Prioridades, Consulta regla

--- a/docs/T1Comercios/claro-authentication-api.info.mdx
+++ b/docs/T1Comercios/claro-authentication-api.info.mdx
@@ -2,7 +2,7 @@
 id: claro-authentication-api
 title: "Claro Authentication API"
 description: "Esta API se utiliza para autenticar usuarios en la plataforma T1 y obtener tokens de acceso necesarios para interactuar con otros endpoints protegidos."
-sidebar_label: Introduction
+sidebar_label: Introducción
 sidebar_position: 0
 hide_title: true
 custom_edit_url: null
