--- a/docs/T1Comercios/documentacion-api-v-2-t-1-comercios.info.mdx
+++ b/docs/T1Comercios/documentacion-api-v-2-t-1-comercios.info.mdx
@@ -2,7 +2,7 @@
 id: documentacion-api-v-2-t-1-comercios
 title: "DOCUMENTACIÓN API V2 T1COMERCIOS"
 description: "Esta API permite a los comercios gestionar sus productos, incluyendo la creación, actualización, eliminación y obtención de información sobre productos. Además, proporciona funcionalidades para pausar y activar productos en distintos canales de venta."
-sidebar_label: Introduction
+sidebar_label: Introducción
 sidebar_position: 0
 hide_title: true
 custom_edit_url: null
