--- a/docs/T1Comercios/pedidos.info.mdx
+++ b/docs/T1Comercios/pedidos.info.mdx
@@ -2,7 +2,7 @@
 id: pedidos
 title: "Pedidos"
 description: "Este API proporciona funcionalidades para la gestión de pedidos en un sistema de marketplace."
-sidebar_label: Introduction
+sidebar_label: Introducción
 sidebar_position: 0
 hide_title: true
 custom_edit_url: null
