--- a/docs/T1Envíos/t-1-envios.info.mdx
+++ b/docs/T1Envíos/t-1-envios.info.mdx
@@ -2,7 +2,7 @@
 id: t-1-envios
 title: "T1Envios"
 description: "Es un servicio creado para poder cotizar y generar guías."
-sidebar_label: Introduction
+sidebar_label: Introducción
 sidebar_position: 0
 hide_title: true
 custom_edit_url: null
