--- a/docs/T1Pagos/t-1-pagos.info.mdx
+++ b/docs/T1Pagos/t-1-pagos.info.mdx
@@ -2,7 +2,7 @@
 id: t-1-pagos
 title: "T1pagos"
 description: "La interfaz para programación de la aplicación (API) T1pagos está diseñada para integrar fácilmente la funcionalidad de pagos en cualquier sitio web. Está basada en arquitectura REST que utiliza el protocolo HTTP para proveer una interfaz uniforme, agnóstica a lenguajes de programación, orientado a recursos y con códigos de respuesta estandarizados."
-sidebar_label: Introduction
+sidebar_label: Introducción
 sidebar_position: 0
 hide_title: true
 custom_edit_url: null
