--- a/docs/T1Envíos/t-1-enviosaws.info.mdx
+++ b/docs/T1Envíos/t-1-enviosaws.info.mdx
@@ -1,8 +1,8 @@
 ---
-id: file-upload-api-imagenes
-title: "File Upload API - IMAGENES"
-description: "API para cargar archivos a la plataforma Claro"
-sidebar_label: Introducción
+id: t-1-enviosaws
+title: "T1EnviosAWS"
+description: ""
+sidebar_label: Introduction
 sidebar_position: 0
 hide_title: true
 custom_edit_url: null
@@ -16,20 +16,20 @@ import Export from "@theme/ApiExplorer/Export";
 
 <span
   className={"theme-doc-version-badge badge badge--secondary"}
-  children={"Version: 1.0.0"}
+  children={"Version: 1.0"}
 >
 </span>
 
 <Heading
   as={"h1"}
   className={"openapi__heading"}
-  children={"File Upload API - IMAGENES"}
+  children={"T1EnviosAWS"}
 >
 </Heading>
 
 
 
-API para cargar archivos a la plataforma Claro
+
 
 
       
