T1Docs T1Envios sidebar fixes

--- a/docs/T1Envíos/t-1-envios.info.mdx
+++ b/docs/T1Envíos/t-1-envios.info.mdx
@@ -53,7 +53,7 @@ La API de T1 Envíos está diseñada para facilitar la integración de funcional
 - **Generación de Guías**: Facilita la creación de guías de envío una vez que se ha cotizado y confirmado un envío.
 - **Rastreo de Guías**: Proporciona la capacidad de rastrear el estado y la ubicación de los envíos en tiempo real.
 
-## Primeros Pasos
+## COMENZAR
 
 ### Paso 1: Crear una Tienda
 
