T1Docs T1Envios (Generar cotización) fix

--- a/docs/T1Envíos/generarcotizacion.api.mdx
+++ b/docs/T1Envíos/generarcotizacion.api.mdx
@@ -1,7 +1,7 @@
 ---
 id: generarcotizacion
 title: "Generar cotización"
-description: "Método para la generación de la cotización."
+description: "Este endpoint permite a los usuarios generar cotizaciones de envío con diferentes paqueterías basadas en el código postal de origen y destino, así como en las dimensiones y peso del paquete. Es útil para obtener un costo estimado del envío antes de proceder con la creación de la guía. Al proporcionar la información requerida, el sistema devolverá las cotizaciones disponibles de diversas paqueterías."
 sidebar_label: "Generar cotización"
 hide_title: true
 hide_table_of_contents: true
@@ -41,7 +41,7 @@ import TabItem from "@theme/TabItem";
 
 
 
-Método para la generación de la cotización.
+Este endpoint permite a los usuarios generar cotizaciones de envío con diferentes paqueterías basadas en el código postal de origen y destino, así como en las dimensiones y peso del paquete. Es útil para obtener un costo estimado del envío antes de proceder con la creación de la guía. Al proporcionar la información requerida, el sistema devolverá las cotizaciones disponibles de diversas paqueterías.
 
 <Heading
   id={"request"}
