--- a/docs/T1Envíos/obtenerun-accesstoken.api.mdx
+++ b/docs/T1Envíos/obtenerun-accesstoken.api.mdx
@@ -1,7 +1,8 @@
 ---
 id: obtenerun-accesstoken
 title: "Autenticación"
-description: "Método para iniciar sesión en el API y obtener un token de acceso. Utilizar https://pcapi.plataforma-claro.com/auth/realms/claroshop-sapi-sa-cv/protocol/openid-connect/token"
+description: "Antes de realizar cualquier operación, es necesario obtener un token de acceso proporcionando tus credenciales (username y password), que son tu correo electrónico y contraseña con los que ingresas a t1envios.com. 
+Los valores de client_id, grant_type y client_secret son preestablecidos y deben usarse tal cual vienen en esta documentación."
 sidebar_label: "Autenticación"
 hide_title: true
 hide_table_of_contents: true
@@ -39,9 +40,10 @@ import TabItem from "@theme/TabItem";
   
 </MethodEndpoint>
 
+Antes de realizar cualquier operación, es necesario obtener un token de acceso proporcionando tus credenciales (`username` y `password`), que son tu correo electrónico y contraseña con los que ingresas a [t1envios.com](https://t1envios.com).
 
+Los valores de `client_id`, `grant_type` y `client_secret` son preestablecidos y deben usarse tal cual vienen en esta documentación.
 
-Método para iniciar sesión en el API y obtener un token de acceso. Utilizar https://pcapi.plataforma-claro.com/auth/realms/claroshop-sapi-sa-cv/protocol/openid-connect/token
 
 <Heading
   id={"request"}
