T1Docs T1Envios fix FAQ

--- a/docs/T1Envíos/newgenerarcotizacion.api.mdx
+++ b/docs/T1Envíos/newgenerarcotizacion.api.mdx
@@ -485,7 +485,39 @@ Este endpoint permite a los usuarios generar cotizaciones de envío con diferent
               </SchemaTabs>
             </TabItem>
           </MimeTabs>
+                    
+                    
+{/* #### ¿Qué requisitos hay para el peso y las dimensiones del paquete?
+El peso del paquete debe ser mayor a 0 kg. Las dimensiones del paquete deben estar en centímetros y ser mayores a 0.
+
+#### ¿Puedo obtener cotizaciones para múltiples paquetes a la vez?
+Actualmente, este endpoint solo permite cotizar un paquete por solicitud. Para cotizar múltiples paquetes, realice solicitudes separadas para cada uno.
+
+#### ¿Qué hago si recibo un error 401 Unauthorized?
+Verifique que está utilizando el token de acceso correcto y que no ha expirado. Si el problema persiste, intente autenticarse nuevamente para obtener un nuevo token.
+
+#### ¿Qué debo hacer si recibo un error 500 Internal Server Error?
+Esto puede ser causado por problemas temporales del servidor. Espere unos minutos e intente nuevamente. Si el problema continúa, contacte al soporte técnico.
+
+#### ¿Cómo puedo actualizar la información de mi cuenta?
+Inicie sesión en el dashboard de t1envios.com y vaya a la sección de configuración de cuenta para actualizar su información. */}
         </div>
+
+#### FAQ
+#### ¿Qué requisitos hay para el peso y las dimensiones del paquete?
+El peso del paquete debe ser mayor a 0 kg. Las dimensiones del paquete deben estar en centímetros y ser mayores a 0.
+
+#### ¿Puedo obtener cotizaciones para múltiples paquetes a la vez?
+Actualmente, este endpoint solo permite cotizar un paquete por solicitud. Para cotizar múltiples paquetes, realice solicitudes separadas para cada uno.
+
+#### ¿Qué hago si recibo un error 401 Unauthorized?
+Verifique que está utilizando el token de acceso correcto y que no ha expirado. Si el problema persiste, intente autenticarse nuevamente para obtener un nuevo token.
+
+#### ¿Qué debo hacer si recibo un error 500 Internal Server Error?
+Esto puede ser causado por problemas temporales del servidor. Espere unos minutos e intente nuevamente. Si el problema continúa, contacte al soporte técnico.
+
+#### ¿Cómo puedo actualizar la información de mi cuenta?
+Inicie sesión en el dashboard de t1envios.com y vaya a la sección de configuración de cuenta para actualizar su información.
       </TabItem><TabItem
         label={"400"}
         value={"400"}
