T1Docs T1Envios fix intro

--- a/docs/T1Envíos/t-1-envios.info.mdx
+++ b/docs/T1Envíos/t-1-envios.info.mdx
@@ -65,7 +65,7 @@ Accede al administrador para configurar tu cuenta. Aquí puedes agregar saldo a 
 
 ### Paso 3: Autenticación vía API
 
-Utiliza los accesos de usuario, contraseña y el ID de tienda proporcionados al crear tu cuenta para autenticarte a través de la API. Esta autenticación es necesaria para poder realizar solicitudes seguras a la API.
+Utiliza tu correo y contraseña con los que entras a t1envios.com para autenticarse a través de la API. Esta autenticación es necesaria para obtener un token y poder realizar solicitudes seguras a la API.
 
 ## Contacto
 
